--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -69,6 +69,10 @@
 								<input name="username" class="text" style="color: #FFFFFF !important" type="text" placeholder="请输入登录账户">
 							</div>
 							<div class="input_outer">
+								<span class="u_user"></span>
+								<input name="nickname" class="text" style="color: #FFFFFF !important" type="text" placeholder="请输入您的昵称">
+							</div>
+							<div class="input_outer">
 								<span class="us_uer"></span>
 								<input name="password" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="password" placeholder="请输入登录密码">
 							</div>
@@ -78,7 +82,7 @@
 							</div>
 							<div class="input_outer">
 								<span class="u_phone"></span>
-								<input name="phone" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="password" placeholder="请输入手机号">
+								<input name="phone" class="text" style="color: #FFFFFF !important; position:absolute; z-index:100;"value="" type="text" placeholder="请输入手机号">
 							</div>
 							<div class="input_outer">
 								<span class="u_sex"></span>
